# scripts

./: README.md  install.sh  justfile  pyproject.toml
.github/workflows/: release.yml  tests.yml
assets/: animated-banner.apng  banner-cursor.txt  banner.txt  generate_banners.py
docs/: development.md  index.html  install.sh  installation.md  versions
python/: imgs_to_txt.py  keep_alive.py  pdf_to_imgs.py
shell/: cleanup.sh  dotfiles.sh  gpgkeys.sh  homebackup.sh  mygit.sh  sortdownloads.sh  sshkeys.sh
src/python/: debug_with.py  keep_alive.py  pdf_to_imgs.py
src/shell/: gpgkeys.sh  mkproject.sh  sortdownloads.sh  sshkeys.sh
tests/: cleanup.bats  dotfiles.bats  gpgkeys.bats  homebackup.bats  install.bats  mkproject.bats  mygit.bats  sortdownloads.bats  ssh-conf.bats  sshkeys.bats  test_helper.bash
tests/mocks/: gh  systemctl
