[project]
name = "scripts"
version = "0.1.0"
description = "Shell and Python utilities for system automation"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "pytesseract",
    "pymupdf",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = ["ruff"]
build = ["pyinstaller"]
